# cr_xml_parser

./: README.md  pyproject.toml
data/: PMC176546.xml  PMC193604.xml
src/: crossref_matcher.py  llm.py  main.py  xml_parser.py
